<resources>
    <string name="app_name">Assignment2</string>
    <string name="restaurant_information">Restaurant Information</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="add">Add</string>
    <string name="enter_rating">Enter Rating</string>
    <string name="search_by_name">Search by Name</string>
</resources>