<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:background="#FFEB3B"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="20dp"
                />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:drawablePadding="20dp"
                app:drawableLeftCompat="@drawable/location" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:drawablePadding="20dp"
                app:drawableLeftCompat="@drawable/phone" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:drawablePadding="20dp"
                app:drawableLeftCompat="@drawable/description" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>